maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: '=' expected but ';' found.
  if (!estFaceMur()){
^